# detection-fusion

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  gt_rectify.py  merge.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  val.py
.github/workflows/: ci.yaml
configs/: README.md
configs/ensemble/: advanced.yaml  advanced_strategies_config.yaml  default.yaml  default_config.yaml  high_precision.yaml  high_precision_config.yaml  high_recall.yaml  high_recall_config.yaml  small_objects.yaml  small_objects_config.yaml
configs/gt_rectification/: aggressive.yaml  balanced.yaml  conservative.yaml  custom.yaml  gt_rectify_aggressive.yaml  gt_rectify_balanced.yaml  gt_rectify_conservative.yaml  gt_rectify_custom.yaml
detection_fusion/: __init__.py  _compat.py  exceptions.py
detection_fusion/cli/: __init__.py  loaders.py  main.py  output.py
detection_fusion/cli/handlers/: __init__.py  analysis.py  base.py  registry.py
detection_fusion/config/: __init__.py  defaults.py  loader.py  models.py
detection_fusion/core/: __init__.py  analyzer.py  detection.py  detection_set.py  ensemble.py  stats.py
detection_fusion/data/: __init__.py  ground_truth.py  loader.py
detection_fusion/data/formats/: __init__.py  base.py  coco.py  registry.py  voc_xml.py  yolo.py
detection_fusion/evaluation/: __init__.py  error_analysis.py  evaluator.py  metrics.py  optimization.py
detection_fusion/pipeline/: __init__.py  context.py  pipeline.py  stages.py
detection_fusion/rectification/: __init__.py
detection_fusion/strategies/: __init__.py  adaptive.py  base.py  clustering.py  confidence_based.py  distance_based.py  mixins.py  nms.py  params.py  probabilistic.py  registry.py  voting.py
detection_fusion/utils/: __init__.py  aggregation.py  clustering.py  geometry.py  io.py  matching.py  metrics.py
detection_fusion/visualization/: __init__.py  plots.py
docs/: API.md  EXAMPLES.md  INSTALLATION.md  STRATEGY_GUIDE.md  TROUBLESHOOTING.md
examples/: README.md  advanced_strategies_demo.py  advanced_usage.py  basic_usage.py  config_usage.py  gt_rectify_config_example.py  rectification_example.py
tests/: __init__.py  conftest.py
tests/config/: test_loader.py  test_models.py
tests/core/: test_detection.py  test_detection_set.py
tests/data/: test_loader.py
tests/data/formats/: __init__.py  test_registry.py  test_yolo.py
tests/pipeline/: test_context.py  test_pipeline.py
tests/strategies/: __init__.py  test_params.py  test_registry.py
